--- a/templates/index.html
+++ b/templates/index.html
@@ -5,27 +5,25 @@
 <html lang="en">
 
 <body>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
-
-<!-- Bootstrap JavaScript -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     
     {% block body_block %}
     <div class="container-wrapper">
         <style>
+            body{
+                background-color: hsla(0, 7%, 94%, 0.685); 
+            }
             .sorted-bar {
                 display: flex;
-                justify-content: center;
+                justify-content: space-evenly;
                 align-items: center;
                 margin-block: 10px 20px;
-            }
+            } 
 
             .btn {
                 margin: 10px;
                 padding: 10px;
                 border: 1px solid #26462b;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                box-shadow: 0 0 5px rgb(176, 176, 176);
             }
 
             .job-listing {
@@ -33,16 +31,22 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
+                
             }
 
             .job {
-
                 justify-content: center;
                 border: 1px solid #dcdcdc;
                 margin-block: 10px 10px;
                 padding: 20px;
                 border-radius: 10px;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                box-shadow: 0 0 5px rgb(166, 166, 166);
+                word-wrap: break-word;  /* Wrap long words onto the next line */
+                overflow: hidden;      /* Hide overflowing content */
+                text-overflow: ellipsis;
+                height: 300px; 
+                background-color: rgba(255, 255, 255, 0.5); 
+                backdrop-filter: blur(10px);
             }
 
             .job-link {
@@ -69,84 +73,84 @@
             <div class="col-lg-6">
                 <div class="sorted-bar">
 
-                    <div class="dropdown" data-category="location" data-filterType="filter">
+                    <div class="dropdown" data-filter-type="filter" data-category="Location">
                         <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton1"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Location
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="#" data-filter="1-option1">Glasgow</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="1-option2">Edinburgh</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="1-option3">Stirling</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="1-option4">Aberdeen</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Glasgow">Glasgow</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Edinburgh">Edinburgh</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Stirling">Stirling</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Aberdeen">Aberdeen</a></li>
                         </ul>
                     </div>
 
-                    <div class="dropdown" data-category="Industry" data-filterType="filter">
+                    <div class="dropdown" data-filter-type="filter" data-category="Industry">
                         <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton2"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Industry
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                            <li><a class="dropdown-item" href="#" data-filter="2-option1">Retail</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="2-option2">Construction, Repair and
+                            <li><a class="dropdown-item" href="#" data-filter="Retail">Retail</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Construction, Repair and Maintenance Services">Construction, Repair and
                                     Maintenance Services</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="2-option3">Personal Customer Services</a>
+                            <li><a class="dropdown-item" href="#" data-filter="Personal Customer Services">Personal Customer Services</a>
                             </li>
-                            <li><a class="dropdown-item" href="#" data-filter="2-option4">Restaurants & Food
+                            <li><a class="dropdown-item" href="#" data-filter="Restaurants & Food Services">Restaurants & Food
                                     Services</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="2-option5">Hotel & Travel
+                            <li><a class="dropdown-item" href="#" data-filter="Hotel & Travel Accommodation">Hotel & Travel
                                     Accommodation</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="2-option6">Others</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Others">Others</a></li>
                         </ul>
                     </div>
 
-                    <div class="dropdown" data-category="Job Type" data-filterType="filter">
+                    <div class="dropdown" data-filter-type="filter" data-category="jobtype">
                         <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton3"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Job Type
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
-                            <li><a class="dropdown-item" href="#" data-filter="3-option1">Part-Time</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="3-option2">Temporary</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="3-option3">Volunteer</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Part-Time">Part-Time</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Temporary">Temporary</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Volunteer">Volunteer</a></li>
                     </div>
 
-                    <div class="dropdown" data-category="Education Level" data-filterType="filter">
+                    <div class="dropdown" data-filter-type="filter" data-category="Education">
                         <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton4"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Education Level
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
-                            <li><a class="dropdown-item" href="#" data-filter="4-option1">Foundation Degree</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="4-option2">GCSE</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="4-option3">Certificate of Higher
+                            <li><a class="dropdown-item" href="#" data-filter="Foundation Degree">Foundation Degree</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="GCSE">GCSE</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Certificate of Higher Education">Certificate of Higher
                                     Education</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="4-option4">Bachelor's Degree</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Bachelor's Degree">Bachelor's Degree</a></li>
                         </ul>
                     </div>
 
-                    <div class="dropdown" data-category="Remote" data-filterType="filter">
-                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton6"
+                    <div class="dropdown" data-filter-type="filter" data-category="Remote">
+                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton5"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Remote
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
-                            <li><a class="dropdown-item" href="#" data-filter="5-option1">In-Person</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="5-option2">Hybrid</a></li>
-                            <li><a class="dropdown-item" href="#" data-filter="5-option3">Remote</a></li>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton5">
+                            <li><a class="dropdown-item" href="#" data-filter="In-Person">In-Person</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Hybrid">Hybrid</a></li>
+                            <li><a class="dropdown-item" href="#" data-filter="Remote">Remote</a></li>
                         </ul>
                     </div>
 
-                    <div class="dropdown" data-category="Salary Sort" data-filterType="sort">
-                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton5"
+                    <div class="dropdown" data-filter-type="sort" data-category="Salary">
+                        <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton6"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Sorted by Salary
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
-                            <li><a class="dropdown-item" href="#" data-filter="6-option1">From highest to lowest</a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton6">
+                            <li><a class="dropdown-item" href="#" data-filter="desc">From highest to lowest</a>
                             </li>
-                            <li><a class="dropdown-item" href="#" data-filter="6-option2">From lowest to highest</a>
+                            <li><a class="dropdown-item" href="#" data-filter="asc">From lowest to highest</a>
                             </li>
                         </ul>
                     </div>
@@ -156,14 +160,13 @@
 
         <div class="job-listing">
             <div class="row">
+
+                
                 {% for job in jobs %}
                 <div class="col-12">
-                    <a href="{% url 'get_job_by_jobId' job_id=job.id %}" class="job-link">
+                    <a href="{% url 'get_job_by_jobId' job_id=job.id %}" class="job-link">    
 
-
-                        <div class="job" data-location="{{ job.city }}" data-industry="{{ job.industry }}"
-                            data-jobtype="{{ job.get_type_display }}" data-education="{{ job.get_requirement_display }}"
-                            data-remote="{{ job.get_remote_display }}" data-salary="{{ job.salary }}">
+                        <div class="job" data-location="{{ job.city }}" data-industry="{{ job.industry }}" data-jobtype="{{ job.get_type_display }}" data-education="{{ job.get_requirement_display }}" data-remote="{{ job.get_remote_display }}" data-salary="{{ job.salary }}">
                             <h3>{{ job.title }}</h3>
                             <p>{{ job.employer }}</p>
                             <div class="job-details">
@@ -177,8 +180,9 @@
                             <p><b>Duration:</b> {{ job.start_date }} - {{ job.end_date }}</p>
                             <p><b>Description:</b> {{ job.description }}</p>
                         </div>
+                    </a>
                 </div>
-                </a>
+                    
                 {% endfor %}
 
 
@@ -186,43 +190,43 @@
         </div>
     </div>
 
-    
-    
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const jobs = document.querySelectorAll('.job');
-
+    
             function filterJobs(filterOption, category) {
                 jobs.forEach(job => {
                     const option = job.dataset[category];
                     job.style.display = option === filterOption || filterOption === 'all' ? 'block' : 'none';
                 });
             }
-
+    
             function sortJobsBySalary(order) {
                 const sortedJobs = Array.from(jobs).sort((a, b) => {
                     const salaryA = parseFloat(a.dataset.salary);
                     const salaryB = parseFloat(b.dataset.salary);
                     return order === 'asc' ? salaryA - salaryB : salaryB - salaryA;
                 });
-
+    
                 jobs.forEach(job => job.remove());
-
+    
                 sortedJobs.forEach(job => {
                     document.querySelector('.job-listing').appendChild(job);
                 });
             }
-
+    
             document.addEventListener('click', function (event) {
                 const target = event.target;
-
+    
                 if (target.classList.contains('dropdown-item')) {
                     const filterType = target.closest('.dropdown').dataset.filterType;
                     const filterOption = target.dataset.filter;
                     const category = target.closest('.dropdown').dataset.category;
-
+    
                     if (filterType === 'filter') {
-                        filterJobs(filterOption, category);
+                        filterJobs(filterOption, category.toLowerCase());
                     } else if (filterType === 'sort') {
                         sortJobsBySalary(filterOption);
                     }
@@ -231,22 +235,17 @@
         });
     </script>
 
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-   
+    
+    
     <script>
         $(document).ready(function () {
-            // Make an AJAX request to fetch all jobs
+             // Make an AJAX request to fetch all jobs
             $.ajax({
                 url: "{% url 'index' %}",
                 method: "GET",
                 dataType: "json",
-                success: function (htmlContent) {
-                    console.log("AJAX response:", response);
-
-                    // Debugging: Log the number of jobs received
-                    console.log("Number of jobs:", response.jobs.length);
-
-                    $(".job-listing .row").html(htmlContent);
+                success: function (response) {
+                    $(".job-listing .row").html(response);
                 },
                 error: function (error) {
                     console.error("Error fetching jobs:", error);
